updated README, added math operations, added multiple agents of same type support